finished html and css style

--- a/index.html
+++ b/index.html
@@ -6,29 +6,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cool Site</title>
-  <link rel="stylesheet" href="style/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
-  <header>
-    <h1>Hey there I have a cool site</h1>
-  </header>
-  <aside>
-    <img src="http://placehold.it/200x200" alt="A cool picture">
-    <div>
-      <h4>Another Article</h4>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum ad esse magnam pariatur in earum quidem?
-      </p>
+  <div class="wrapper">
+    <header>
+      <h1 class="text-center">Hey there I have a cool site</h1>
+    </header>
+    <div class="wrapper2">
+      <div class="main-content">
+        <main>
+          <div class="bar"></div>
+          <h2 class="text-center">Why Designers are important!</h2>
+          <div class="articles">
+            <p><span class="bold">Lorem ipsum</span> dolor sit amet consectetur, adipisicing elit. Quasi nobis nihil
+              quae
+              natus, reprehenderit
+              ducimus
+              tempora dolore provident incidunt quia quibusdam hic odio impedit aut velit pariatur, delectus nisi
+              blanditiis.</p>
+            <p><span class="bold">Lorem ipsum</span> dolor sit amet consectetur adipisicing elit. Ea soluta ipsa ex
+              autem
+              quasi accusamus vitae
+              ipsam
+              ducimus? Veniam eius amet eos deleniti odit cum consequuntur nostrum optio debitis architecto</p>
+          </div>
+        </main>
+
+      </div>
+
+      <div class="side-content">
+        <aside>
+          <img src="http://placehold.it/200x100" alt="A cool picture">
+          <div>
+            <h4>Another Article</h4>
+            <p><span class="bold">Lorem ipsum</span> dolor sit amet consectetur adipisicing elit. Voluptatum ad
+              esse
+              magnam pariatur in earum
+              quidem...
+            </p>
+          </div>
+        </aside>
+      </div>
+
     </div>
-  </aside>
-  <main>
-    <div class="bar"></div>
-    <h2>Why Designers are important!</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi nobis nihil quae natus, reprehenderit ducimus
-      tempora dolore provident incidunt quia quibusdam hic odio impedit aut velit pariatur, delectus nisi blanditiis.</p>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea soluta ipsa ex autem quasi accusamus vitae ipsam
-      ducimus? Veniam eius amet eos deleniti odit cum consequuntur nostrum optio debitis architecto?</p>
-  </main>
+    <footer></footer>
+  </div>
 </body>
 
 </html>
