--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </main>
 
       </div>
+      <!--main-content-->
 
       <div class="side-content">
         <aside>
@@ -53,8 +54,10 @@
       </div>
 
     </div>
+    <!--wrapper2-->
     <footer></footer>
   </div>
+  <!--wrapper-->
 </body>
 
 </html>
